--- a/static/sass/_grid.sass
+++ b/static/sass/_grid.sass
@@ -63,7 +63,7 @@
 /* COL-3*/
 .grid-col3
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(300px, 33.3333%))
+  grid-template-columns: repeat(auto-fill, minmax(345px, 330px))
 
 .grid-col2
   display: grid
