--- a/static/sass/_footer.sass
+++ b/static/sass/_footer.sass
@@ -42,6 +42,9 @@
     display: inline-block
     background-position-x: 75%
 
+@media (max-width: 575px)
+  .footer-top-phones
+    text-align: center !important
 .vk_icon
   background: url(../img/icons/social.jpg)
   background-position-x: 75%
