--- a/static/sass/_footer.sass
+++ b/static/sass/_footer.sass
@@ -45,6 +45,9 @@
 @media (max-width: 575px)
   .footer-top-phones
     text-align: center !important
+    order: 2
+  .footer-social
+    flex-direction: column
 .vk_icon
   background: url(../img/icons/social.jpg)
   background-position-x: 75%
