--- a/static/sass/_form_controls.sass
+++ b/static/sass/_form_controls.sass
@@ -9,6 +9,11 @@
       font-size: 14px
   &:focus
     outline-width: 0
+  &.borderless
+    box-shadow: none
+    background: none
+    border: 1px solid #bebebe
+
 
 select
   font-family: "MuseoSansCyrl-300",sans-serif
