--- a/static/sass/_grid.sass
+++ b/static/sass/_grid.sass
@@ -67,9 +67,14 @@
 
 .grid-col2
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(300px, 33.3333%))
+  grid-template-columns: repeat(auto-fill, minmax(330px, auto))
   grid-gap: 30px
-
+//@media screen and (max-width: 1199px )
+//  .grid-col2
+//    grid-template-columns: repeat(auto-fill, minmax(330px, 480px))
+//@media screen and (max-width: 768px )
+//  .grid-col2
+//    grid-template-columns: repeat(auto-fill, minmax(330px, 350px))
 //@media screen and (max-width: 1199px)
 //  .grid-col3
 //    grid-template-columns: repeat(auto-fill, minmax(360px, auto))
