--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -4,5 +4,8 @@
 @import "form_controls"
 @import "grid"
 @import "header"
+@import "blog"
+@import "contacts"
+@import "prices"
 @import "footer"
 @import "media"
