--- a/static/sass/_header.sass
+++ b/static/sass/_header.sass
@@ -3,14 +3,17 @@
   //height: 100vh
   padding-top: 30px
   margin-bottom: 70px
+
 .header.header-alt
   padding: 0
   margin: 0
   background: none
+  .mobile-menu-wrapper
+    margin-top: 20px
+
 @media (max-width: 575px)
   .header
     background: url(../images/header_mobile.jpg) no-repeat 100% 0
-
 
 .header-logo
   color: $color_grey
@@ -91,6 +94,8 @@
     display: flex
   .header-wrapper
     display: none
+  .header-dropdown
+    display: none !important
 
 
 .mobile-toggle
@@ -132,6 +137,7 @@
   position: absolute
   width: 100%
   height: 100vh
+  z-index: -1
   transition: background-color 0.5s ease-in
 
 .mobile-menu-panel-active
@@ -191,6 +197,7 @@
   display: none
   z-index: 1000
   top: 0
+
 .header-dropdown.fixed
   position: unset
   display: flex
@@ -440,6 +447,10 @@
 .price-item
   height: 238px
   padding: 30px
+  &.bg-grey
+    height: 310px
+  &.dropdown-prices
+    height: 170px
 
   p
     font-family: 'MuseoSansCyrl-100', sans-serif
@@ -472,7 +483,8 @@
   background: url(../images/price2.png) no-repeat
 .bg-3
   background: url(../images/price3.png) no-repeat
-
+.bg-grey
+  background: $bg-grey
 // how-it-works
 
 .how-it-works
