--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -1,15 +1,18 @@
+@media screen and (max-width: 2560px)
+  .not-visible-xxl
+    display: none !important
 @media screen and (max-width: 1199px)
   .not-visible-xl
-    display: none
+    display: none !important
 
 @media (max-width: 991px)
   .not-visible-lg
-    display: none
+    display: none !important
 
 @media (max-width: 767px)
   .not-visible-md
-    display: none
+    display: none !important
 
 @media (max-width: 575px)
   .not-visible-sm
-    display: none
+    display: none !important
