--- a/static/sass/_header.sass
+++ b/static/sass/_header.sass
@@ -463,10 +463,10 @@
       font-size: 16px
       display: block
 
-    &::before
+    &:before
         content: "\22C5"
         position: absolute
-        color: #ffd05d
+        color: $color_yellow
         left: -25px
         font-size: 50px
         top: -30px
