--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -1,7 +1,4 @@
-@media screen and (max-width: 2560px)
-  .not-visible-xxl
-    display: none !important
-@media screen and (max-width: 1199px)
+@media (max-width: 1199px)
   .not-visible-xl
     display: none !important
 
@@ -16,3 +13,5 @@
 @media (max-width: 575px)
   .not-visible-sm
     display: none !important
+
+
